# jimmy

./: .gitignore  CMakeLists.txt  README  README.md  mainpage.dox  manifest.xml  positions
conf/: IK.cf  gestures annotated  gestures.cf  plan.cf  poses annotated.cf  poses.cf
include/jimmy/: ControlUtils.h  Eigen_utils.h  IK.h  IKcmd.h  Jimmy.h  JimmyCommon.h  Logger.h  Plan.h  RobotState.h  SDModel.h  SDModel_common.h  Step.h  TrajEW.h  Utils.h  arbotix_comm.h  eigQuadProgTemplate.h  lipm_planner.h  lqr_controller.h  mrdplot.h  sdlib.h  traj.h
launch/: jimmy.launch  jimmy.launch~
msg/: jimmy_command.msg  jimmy_gesture.msg  jimmy_servo.msg
msg_gen/cpp/include/jimmy/: jimmy_command.h  jimmy_gesture.h  jimmy_servo.h  jimmy_setJoints.h
msg_gen/lisp/: _package.lisp  _package_jimmy_command.lisp  _package_jimmy_gesture.lisp  _package_jimmy_servo.lisp  _package_jimmy_setJoints.lisp  jimmy-msg.asd  jimmy_command.lisp  jimmy_gesture.lisp  jimmy_servo.lisp  jimmy_setJoints.lisp
scripts/: idle.py  stt.py  test_conversation.py  test_gesture.py  test_send_servo_py.py  testnoise.py  testspeak.py
src/: ControlUtils.cpp  IK.cpp  Jimmy.cpp  JimmyWalkMain.cpp  Logger.cpp  Plan.cpp  RobotState.cpp  SDModel_common.cpp  TrajEW.cpp  idle.cpp  jimmy_gestures.cpp  jimmy_servos.cpp  jimmy_servos2.cpp  lipm_planner.cpp  lipm_test.cpp  mrdplot.c  sdlib.c  test_puppet.cpp  test_send_gesture_cmd.cpp  test_send_ros_cmd.cpp  test_send_servo_cmd.cpp  test_serial.cpp  test_wiggle.cpp
src/jimmy/msg/: __init__.py  _jimmy_command.py  _jimmy_gesture.py  _jimmy_servo.py  _jimmy_setJoints.py
src/mrdplot/: findMRDPLOTindex.m  mrdplot.m  mrdplot_convert.m  mrdplot_functions.m  mrdplot_gen.m
